# pixi-experimental-backends

./: .gitignore  Cargo.toml  LICENSE  pixi.toml
.github/workflows/: build-and-upload.yml
crates/pixi_build_autotools/: Cargo.toml
crates/pixi_build_autotools/src/: build_script.j2  build_script.rs  config.rs  main.rs
crates/pixi_build_go/: Cargo.toml
crates/pixi_build_go/src/: build_script.j2  build_script.rs  config.rs  main.rs  metadata.rs
crates/pixi_build_go/src/snapshots/: pixi_build_go__build_script__test__build_script@bash.snap  pixi_build_go__build_script__test__build_script@cmdexe.snap  pixi_build_go__build_script__test__build_script_with_extra_args@bash.snap  pixi_build_go__build_script__test__build_script_with_extra_args@cmdexe.snap  pixi_build_go__build_script__test__build_script_with_licenses@bash.snap  pixi_build_go__build_script__test__build_script_with_licenses@cmdexe.snap  pixi_build_go__build_script__test__build_script_with_linker_flags@bash.snap  pixi_build_go__build_script__test__build_script_with_linker_flags@cmdexe.snap  pixi_build_go__tests__collect_licenses_adds_go_licenses_dep.snap  pixi_build_go__tests__env_vars_are_set.snap  pixi_build_go__tests__go_cgo_compiler_is_in_build_requirements.snap  pixi_build_go__tests__go_nocgo_compiler_is_in_build_requirements.snap
crates/pixi_build_gradle/: Cargo.toml
crates/pixi_build_gradle/src/: build_script.j2  build_script.rs  config.rs  main.rs
crates/pixi_build_make/: Cargo.toml
crates/pixi_build_make/src/: build_script.j2  build_script.rs  config.rs  main.rs
crates/pixi_build_meson/: Cargo.toml
crates/pixi_build_meson/src/: build_script.j2  build_script.rs  config.rs  main.rs
examples/detekt/: pixi.toml
examples/fzf/: pixi.toml
examples/opus/: pixi.toml
examples/xz/: pixi.toml
recipe/: recipe.yaml  variants.yaml
scripts/: bump-versions.py  generate-versions.py  upload-packages.py
