[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["pixi contributors <hi@prefix.dev>"]
edition = "2024"
license = "BSD-3-Clause"
rust-version = "1.90"

[workspace.dependencies]
async-trait = "0.1.86"
indexmap = "2.10.0"
miette = "7.5.0"
minijinja = "2.15.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

pixi_build_backend = { git = "https://github.com/prefix-dev/pixi", rev = "9a5f03b944fa0dca305543e38c11bcbcacb4b469" }
pixi_build_types = { git = "https://github.com/prefix-dev/pixi", rev = "9a5f03b944fa0dca305543e38c11bcbcacb4b469" }
recipe_stage0 = { git = "https://github.com/prefix-dev/pixi", rev = "9a5f03b944fa0dca305543e38c11bcbcacb4b469" }

rattler_build_jinja = { git = "https://github.com/prefix-dev/rattler-build", rev = "v0.58.1" }
rattler_build_types = { git = "https://github.com/prefix-dev/rattler-build", rev = "v0.58.1" }
rattler_conda_types = "0.43.5"
