[package]
description = "Gradle build backend for Pixi"
edition.workspace = true
license.workspace = true
name = "pixi_build_gradle"
version = "0.1.0"

[[bin]]
name = "pixi-build-gradle"
path = "src/main.rs"

[features]
default = ["rustls-tls"]
native-tls = ["pixi_build_backend/native-tls"]
rustls-tls = ["pixi_build_backend/rustls-tls"]

[dependencies]
async-trait = { workspace = true }
indexmap = { workspace = true }
miette = { workspace = true }
minijinja = { workspace = true }
pixi_build_backend = { workspace = true }
pixi_build_types = { workspace = true }
rattler_build_jinja = { workspace = true }
rattler_build_types = { workspace = true }
rattler_conda_types = { workspace = true }
recipe_stage0 = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
